# open-novel

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: main.tsx  (+2 more)
open_novel/: __init__.py  cli.py  logging_config.py  server.py
scripts/: build_release_bundle.py  e2e_ai_provider.py  e2e_controlled_model.py  final_acceptance.py  open_novel_ops.py  open_novel_updater.py  package_check.py  release_check.py
tests/: conftest.py  test_active_prohibitions.py  test_agents.py  test_ai_runtime.py  test_author_presenter.py  test_backup.py  test_beginner_guidance.py  test_book_analysis_formula.py  test_chapter_drafting.py  test_chapter_gate.py  test_chapter_progress.py  test_chapters.py  test_cli_adapters.py  test_context_pack.py  test_continuity.py  test_database_project_service_reads.py  test_diff.py  test_director_pipeline_registry.py  test_editorial_review.py  test_exporters.py  test_framework_cleanliness.py  test_gate_recovery.py  test_issue_navigation.py  test_jobs.py  test_local_training.py  test_long_form_planning_console.py  test_markdown.py  test_memory_distillation.py  test_memory_topic.py  test_memory_validation.py  test_model_comparison.py  test_model_library.py  test_package_check_script.py  test_path_guard.py  test_plot_direction.py  test_post_chapter.py  test_project_plan.py  test_project_service.py  test_prompt_humanity_guardrails.py  test_relationship_graph.py  (+15 more)
(+178 files in other folders)
