[project]
name = "open-novel"
version = "0.1.4"
description = "Local-first agentic writing workspace for long-form novels."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Open Novel Contributors" }
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "httpx>=0.27.0",
  "httpx2>=2.0.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
open-novel = "open_novel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["open_novel"]

[tool.hatch.build.targets.wheel.force-include]
"frontend" = "frontend"
"skills" = "skills"

[tool.hatch.build.targets.sdist]
include = [
  "open_novel",
  "skills",
  "scripts/open_novel_ops.py",
  "scripts/open_novel_updater.py",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "playwright>=1.61.0",
]
